--- a/angular.json
+++ b/angular.json
@@ -112,8 +112,13 @@
               "devServerTarget": "ngcalculator:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ngcalculator"
 }
